--- a/DiageoMDMWeb/src/main/webapp/perfil/cambiarContrasenia/cambiarContrasenia.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/perfil/cambiarContrasenia/cambiarContrasenia.xhtml
@@ -48,7 +48,7 @@
                                 <br/><br/>
                             </h:panelGroup>
                             <br/>
-                            <p:commandButton value="#{msg.btn_send}" process="@all" update="@form" actionListener="#{cambiarContraseniaBean.cambiarContrasenia()}"
+                            <p:commandButton value="#{msg.btn_send}" process="@all" update="@form" action="#{cambiarContraseniaBean.cambiarContrasenia()}"
                                              styleClass="button" style="width: 10%;left: 0%"/>                                                                                                                     
                             <br/>                               
                         </h:panelGrid>
