--- a/DiageoMDMWeb/src/main/webapp/outlet/consultarOutlet.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/outlet/consultarOutlet.xhtml
@@ -39,7 +39,8 @@
                     <p:dataTable id="dtOutletNew" value="#{outletConsultarBean.listOutlets}" var="outdtNew" paginatorAlwaysVisible="false" rows="15"
                                  paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                                  style="font-size:  90%;word-wrap: break-word;" rendered="#{outletConsultarBean.verDetalle}" paginator="true"
-                                 widgetVar="dtOutletSearch"> 
+                                 widgetVar="dtOutletSearch"
+                                 emptyMessage="#{msg.out_msg_not_record}"> 
                         <p:column headerText="#{msg.status}" filterMatchMode="exact" filterBy="#{outdtNew.statusMDM}">
                             <f:facet name="filter">
                                 <p:selectOneMenu onchange="PF('dtOutletSearch').filter()" style="width: 80%">
